# KaggleGenAICapstoneProject

./: .gitignore  LICENSE  README.md  pyproject.toml
pathfinder/: .env.example  agent.py  agent_controller.py  config.json  main.py  prompts.py  requirements.txt  tui.py
pathfinder/helpers/: config_loader.py  config_manager.py  notion_helper.py
pathfinder/plugins/: token_tracking_plugin.py  tool_logging_plugin.py
pathfinder/static/: styles.tcss
pathfinder/subagents/: goal_planner.py  notion_agent.py  obsidian_agent.py  travel_planner.py
pathfinder/tools/: function_tools.py  mcp_tools.py
